--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,6 @@
   <body>
     <div id="page-wrap">
 
-     <img src="images/selfpic.jpg" width="35%" alt="Photo of Kane Greenwalt" id="pic" />
 
      <div id="contact-info" class="vcard">
 
@@ -30,12 +29,9 @@
 
      <dl>
          <dd class="clear"></dd>
-
          <dt>Education</dt>
          <dd>
              <h2>Davenport West Highschool <br> Mid City Highschool</h2>
-             <p>
-                <strong></strong></p>
          </dd>
 
          <dd class="clear"></dd>
@@ -43,50 +39,30 @@
          <dt>Skills</dt>
          <dd>
              <h2>Graphic Design</h2>
+             <img class="resizeLamp"src="images/lamp.PNG" alt="Pic of lamp" height="270px">
+             <img class="resizeBottle" src="images/bottle.PNG" alt="Pic of bottle" >
              <p>Adobe Photoshop & Adobe Illustrator</p>
-
              <h2>Photography</h2>
              <p>My style of photography is Macro Photography. I also like taking black and white photos. I also enjoy taking close up images
                because you can pass by something and think nothing of it , but once you see it up close, it becomes a different object. </p>
-
              <h2>Microsoft Apps</h2>
              <p>Excel, Powerpoint, Word</p>
-
          </dd>
 
          <dd class="clear"></dd>
 
-         <dt>Experience</dt>
-         <dd>
-           <h2>Blue Grass Drive In<span>Lot Security, Blue Grass IA - 4/7/17 - Current</span></h2>
-           <ul>
-               <li>Customer Service</li><br>
-               <li>Parking attendant</li><br>
-               <li>Landscaping</li>
-           </ul>
-             <h2>Jeff's Market<span>Cashier, Blue Grass IA - 11/32/17 - 3/16/18</span></h2>
-             <ul>
-                 <li>Customer Service</li><br>
-                 <li>Store Cleaning</li>
-             </ul>
-
-             <h2>Deck Supply Services<span>IT/Shop Hand, Blue Grass IA - 3/25/18 - 1/18/19</span></h2>
-             <ul>
-                 <li>Helped set up computers for CAD designers</li><br>
-                 <li>CnC operator</li><br>
-                 <li>Worked hands on building different deck supplies</li>
-             </ul>
          </dd>
 
          <dd class="clear"></dd>
 
          <dt>Hobbies</dt>
-         <dd>In my spare time I like to work on computers. When I'm not working on computers I spend my time working on robotics</dd>
+         <dd>I enjoy taking my dogs for walks and playing video games.</dd>
 
          <dd class="clear"></dd>
 
          <dt>References</dt>
-         <dd>Available on request</dd>
+         <dd>Jessica Hankins - (563) 320-3971, hankinsj@mail.davenport.k12.ia.us</dd>
+         <dd>Mark Sade - (563) 340-1525, sadema@mail.davenport.k12.ia.us</dd>
 
          <dd class="clear"></dd>
      </dl>
