--- a/index.html
+++ b/index.html
@@ -4,23 +4,27 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title></title>
+
+    <title>Home</title>
   </head>
   <body>
-    <h1>Kallypso's Website</h1>
+    <h1><font size="10">Kallypso's Website</font></h1>
     <nav>
     <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">Resume</a></li>
-  <li><a href="#about">Dogs</a></li>
+      <li><a href="Resume.html">Resume</a></li>
+      <li><a href="doggo.html">Personal Business</a></li>
+      <li><a href="inspiration.html">Inspiration</a></li>
 </ul>
 </nav>
-<h2>About Me</h2>
-<p>
+<h2><font size="6">About Me</font></h2>
+<p><font size="5">
   My name is Kallypso Essen and here are somethings about me: I am 17 years old. I went to west highschool for 3 years, currently
-I am a senior at Mid City high. The career I wish to pursue is graphic design.
-  </p>
+I am a senior at Mid City high. The career I wish to pursue is graphic design. When i'm older and have my own home, i'd like to own and run a homless shelter for animals.
+  </font></p>
   <iframe src="https://docs.google.com/presentation/d/1vPuQM5fww2Zxi5hzqOnuyZTQuMDSLfdmGZh-xI8gnVc/edit?usp=sharing" width="600px" height="500px"></iframe>
+  <h2><font size="6">Examples of my work with HTML</font></h2>
+  <img class="resizefavoritedogs" src="images/favorite dogs.PNG" alt="favorite dogs website">
+  <img class="resizerecipe" src="images/recipe.PNG" alt="recipe website">
 <address>
   <a href="kallypsoessen125@gmail.com">kallypsoessen125@gmail.com</a><br>
    <a href="(309) 373-1760">Phone Number: (309) 373-1760</a>
