--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/resume.css">
-    <title></title>
+    <title>resume</title>
   </head>
   <body>
     <div id="page-wrap">
@@ -17,7 +17,7 @@
          <nav>
      <ul>
        <strong><a style="margin: 40px"href="index.html">Home</a>
-       <a href="resume.html">Resume</a></strong>
+       <a href="doggo.html">Personal Business</a>
      </ul>
          <p>
              Cell: <span class="tel">309-373-1760</span><br />
