--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </nav>
 <h2><font size="6">About Me</font></h2>
 <p><font size="5">
-  My name is Kallypso Essen and here are somethings about me: I am 17 years old. I went to west highschool for 3 years, currently
+  My name is Kallypso Essen and here are somethings about me: I am currently 17 years old. I went to west highschool for 3 years, currently
 I am a senior at Mid City high. The career I wish to pursue is graphic design. When i'm older and have my own home, i'd like to own and run a homless shelter for animals.
   </font></p>
   <iframe src="https://docs.google.com/presentation/d/1vPuQM5fww2Zxi5hzqOnuyZTQuMDSLfdmGZh-xI8gnVc/edit?usp=sharing" width="600px" height="500px"></iframe>
