--- a/resume.html
+++ b/resume.html
@@ -16,8 +16,9 @@
          <h1 class="fn">Kallypso Essen</h1>
          <nav>
      <ul>
-       <strong><a style="margin: 40px"href="index.html">Home</a>
-       <a href="doggo.html">Personal Business</a>
+       <strong><a style="margin: 30px"href="index.html">Home</a>
+       <a style="margin: 30px" href="doggo.html">Personal Business</a>
+       <a href="inspiration.html">Inspiration</a>
      </ul>
          <p>
              Cell: <span class="tel">309-373-1760</span><br />
@@ -31,7 +32,7 @@
          <dd class="clear"></dd>
          <dt>Education</dt>
          <dd>
-             <h2>Davenport West Highschool <br> Mid City Highschool</h2>
+             <h2>Davenport West Highschool (August 21st, 2015 - March 16, 2018)<br> Mid City Highschool (March 18th, 2018 - May 24th, 2019)</h2>
          </dd>
 
          <dd class="clear"></dd>
